--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 14:05:14 2018</p>
+         Last Run: Thu Jul 19 15:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -31,26 +31,26 @@
                      <tr>
                         <td>05:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>23</td>
-                        <td>23</td>
-                        <td>49</td>
-                        <td>46</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>55</td>
+                        <td>45</td>
                         <td>2</td>
-                        <td>16</td>
+                        <td>19</td>
                         <td>SSE</td>
-                        <td>83</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>44</td>
-                        <td>50</td>
+                        <td>54</td>
+                        <td>46</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>16</td>
                         <td>SSE</td>
-                        <td>83</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -62,19 +62,19 @@
                         <td>1</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>73</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>9</td>
+                        <td>16</td>
                         <td>52</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>SE</td>
-                        <td>54</td>
+                        <td>ESE</td>
+                        <td>57</td>
                      </tr>
                   </tbody>
                </table>
@@ -119,7 +119,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "23",
+                 "22",
                  "22",
                  "21",
                  "21"
@@ -131,7 +131,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "23",
+                 "22",
                  "22",
                  "21",
                  "21"
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "49",
-                 "44",
+                 "55",
+                 "54",
                  "24",
-                 "9"
+                 "16"
                ]
              },
              {
@@ -197,8 +197,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "45",
                  "46",
-                 "50",
                  "50",
                  "52"
                ]
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "83",
-                 "83",
-                 "73",
-                 "54"
+                 "85",
+                 "84",
+                 "75",
+                 "57"
                ]
              }
            ]
@@ -229,7 +229,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 14:05:14 2018</p>
+         Last Run: Thu Jul 19 15:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -253,12 +253,12 @@
                         <td>Clear</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>0</td>
-                        <td>43</td>
+                        <td>1</td>
+                        <td>41</td>
                         <td>3</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>5</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -266,45 +266,45 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>36</td>
                         <td>4</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>4</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>30</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>WSW</td>
-                        <td>3</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>15</td>
-                        <td>29</td>
-                        <td>7</td>
-                        <td>11</td>
-                        <td>WSW</td>
-                        <td>37</td>
-                     </tr>
-                     <tr>
-                        <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
                         <td>27</td>
                         <td>7</td>
-                        <td>14</td>
+                        <td>13</td>
+                        <td>WSW</td>
+                        <td>42</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>15</td>
+                        <td>26</td>
+                        <td>7</td>
+                        <td>16</td>
                         <td>W</td>
                         <td>42</td>
                      </tr>
@@ -354,9 +354,9 @@
                "data":[
                  "17",
                  "18",
-                 "19",
                  "20",
-                 "21"
+                 "21",
+                 "22"
                ]
              },
              {
@@ -367,9 +367,9 @@
                "data":[
                  "17",
                  "18",
-                 "19",
                  "20",
-                 "21"
+                 "21",
+                 "22"
                ]
              }
            ]
@@ -422,7 +422,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
+                 "1",
                  "0",
                  "0",
                  "15",
@@ -434,11 +434,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "43",
-                 "38",
-                 "32",
-                 "29",
-                 "27"
+                 "41",
+                 "36",
+                 "30",
+                 "27",
+                 "26"
                ]
              },
              {
@@ -446,10 +446,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "5",
-                 "4",
-                 "3",
-                 "37",
+                 "6",
+                 "10",
+                 "12",
+                 "42",
                  "42"
                ]
              }
@@ -467,7 +467,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 14:05:14 2018</p>
+         Last Run: Thu Jul 19 15:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -489,34 +489,34 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>0</td>
                         <td>34</td>
                         <td>1</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>15</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>37</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>12</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>3</td>
-                        <td>45</td>
+                        <td>44</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
@@ -564,9 +564,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "23",
                  "22",
-                 "20"
+                 "21",
+                 "19"
                ]
              },
              {
@@ -575,9 +575,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "23",
                  "22",
-                 "20"
+                 "21",
+                 "19"
                ]
              }
            ]
@@ -639,8 +639,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "34",
-                 "38",
-                 "45"
+                 "37",
+                 "44"
                ]
              },
              {
@@ -648,8 +648,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "22",
                  "15",
-                 "12",
                  "11"
                ]
              }
@@ -667,7 +667,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 14:05:14 2018</p>
+         Last Run: Thu Jul 19 15:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -688,63 +688,63 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>24</td>
-                        <td>35</td>
+                        <td>30</td>
+                        <td>36</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>39</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>18</td>
-                        <td>39</td>
+                        <td>24</td>
+                        <td>40</td>
                         <td>1</td>
-                        <td>14</td>
-                        <td>SE</td>
-                        <td>45</td>
+                        <td>13</td>
+                        <td>ESE</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>7</td>
-                        <td>43</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>14</td>
+                        <td>44</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>49</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>20</td>
-                        <td>20</td>
-                        <td>9</td>
-                        <td>50</td>
+                        <td>51</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>ENE</td>
-                        <td>49</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>18</td>
-                        <td>18</td>
-                        <td>31</td>
-                        <td>58</td>
+                        <td>17</td>
+                        <td>17</td>
+                        <td>45</td>
+                        <td>60</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>ENE</td>
-                        <td>44</td>
+                        <td>10</td>
+                        <td>NE</td>
+                        <td>53</td>
                      </tr>
                   </tbody>
                </table>
@@ -792,9 +792,9 @@
                "data":[
                  "24",
                  "23",
-                 "22",
-                 "20",
-                 "18"
+                 "21",
+                 "19",
+                 "17"
                ]
              },
              {
@@ -805,9 +805,9 @@
                "data":[
                  "24",
                  "23",
-                 "22",
-                 "20",
-                 "18"
+                 "21",
+                 "19",
+                 "17"
                ]
              }
            ]
@@ -860,11 +860,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "30",
                  "24",
-                 "18",
-                 "7",
-                 "9",
-                 "31"
+                 "14",
+                 "20",
+                 "45"
                ]
              },
              {
@@ -872,11 +872,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "35",
-                 "39",
-                 "43",
-                 "50",
-                 "58"
+                 "36",
+                 "40",
+                 "44",
+                 "51",
+                 "60"
                ]
              },
              {
@@ -884,11 +884,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "39",
-                 "45",
-                 "49",
-                 "49",
-                 "44"
+                 "37",
+                 "44",
+                 "51",
+                 "53",
+                 "53"
                ]
              }
            ]
