--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 17:05:16 2018</p>
+         Last Run: Thu Jul 19 18:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -29,40 +29,28 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>06:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>39</td>
-                        <td>46</td>
-                        <td>1</td>
-                        <td>14</td>
-                        <td>SSE</td>
-                        <td>76</td>
-                     </tr>
-                     <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>39</td>
-                        <td>47</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>34</td>
+                        <td>44</td>
                         <td>1</td>
-                        <td>16</td>
+                        <td>13</td>
                         <td>SE</td>
-                        <td>71</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>12</td>
-                        <td>51</td>
+                        <td>22</td>
+                        <td>48</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>ESE</td>
-                        <td>57</td>
+                        <td>59</td>
                      </tr>
                   </tbody>
                </table>
@@ -95,7 +83,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "06:00 PM",
              "07:00 PM",
              "08:00 PM"
            ],
@@ -107,7 +94,6 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "22",
-                 "21",
                  "21"
                ]
              },
@@ -118,7 +104,6 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "22",
-                 "21",
                  "21"
                ]
              }
@@ -160,7 +145,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "06:00 PM",
              "07:00 PM",
              "08:00 PM"
            ],
@@ -170,9 +154,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "39",
-                 "39",
-                 "12"
+                 "34",
+                 "22"
                ]
              },
              {
@@ -180,9 +163,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "46",
-                 "47",
-                 "51"
+                 "44",
+                 "48"
                ]
              },
              {
@@ -190,9 +172,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "76",
-                 "71",
-                 "57"
+                 "78",
+                 "59"
                ]
              }
            ]
@@ -210,7 +191,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 17:05:16 2018</p>
+         Last Run: Thu Jul 19 18:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -251,7 +232,7 @@
                         <td>4</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>9</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -259,11 +240,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>30</td>
                         <td>6</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>12</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -274,7 +255,7 @@
                         <td>27</td>
                         <td>7</td>
                         <td>13</td>
-                        <td>WSW</td>
+                        <td>W</td>
                         <td>40</td>
                      </tr>
                      <tr>
@@ -285,7 +266,7 @@
                         <td>15</td>
                         <td>26</td>
                         <td>7</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>W</td>
                         <td>40</td>
                      </tr>
@@ -417,7 +398,7 @@
                "data":[
                  "41",
                  "36",
-                 "31",
+                 "30",
                  "27",
                  "26"
                ]
@@ -428,8 +409,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "6",
-                 "9",
-                 "12",
+                 "10",
+                 "13",
                  "40",
                  "40"
                ]
@@ -448,7 +429,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 17:05:16 2018</p>
+         Last Run: Thu Jul 19 18:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -477,7 +458,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>23</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -485,11 +466,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>37</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>16</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -500,8 +481,8 @@
                         <td>45</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>ESE</td>
-                        <td>11</td>
+                        <td>E</td>
+                        <td>9</td>
                      </tr>
                   </tbody>
                </table>
@@ -620,7 +601,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "34",
-                 "38",
+                 "37",
                  "45"
                ]
              },
@@ -629,9 +610,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "23",
-                 "16",
-                 "11"
+                 "19",
+                 "13",
+                 "9"
                ]
              }
            ]
@@ -648,7 +629,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 17:05:16 2018</p>
+         Last Run: Thu Jul 19 18:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -669,58 +650,58 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>Partly Cloudy</td>
+                        <td>25</td>
+                        <td>25</td>
+                        <td>12</td>
                         <td>34</td>
-                        <td>35</td>
                         <td>2</td>
                         <td>13</td>
-                        <td>SE</td>
-                        <td>36</td>
+                        <td>ESE</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>24</td>
-                        <td>39</td>
+                        <td>12</td>
+                        <td>38</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>ESE</td>
-                        <td>43</td>
+                        <td>E</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>16</td>
-                        <td>44</td>
+                        <td>12</td>
+                        <td>43</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>ESE</td>
-                        <td>49</td>
+                        <td>E</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>20</td>
+                        <td>22</td>
                         <td>51</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>ENE</td>
-                        <td>52</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>47</td>
+                        <td>31</td>
                         <td>60</td>
                         <td>0</td>
                         <td>10</td>
@@ -771,7 +752,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "24",
+                 "25",
                  "23",
                  "22",
                  "20",
@@ -784,7 +765,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "24",
+                 "25",
                  "23",
                  "22",
                  "20",
@@ -841,11 +822,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "34",
-                 "24",
-                 "16",
-                 "20",
-                 "47"
+                 "12",
+                 "12",
+                 "12",
+                 "22",
+                 "31"
                ]
              },
              {
@@ -853,9 +834,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "35",
-                 "39",
-                 "44",
+                 "34",
+                 "38",
+                 "43",
                  "51",
                  "60"
                ]
@@ -865,10 +846,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "36",
-                 "43",
-                 "49",
-                 "52",
+                 "50",
+                 "50",
+                 "51",
+                 "50",
                  "50"
                ]
              }
